2011-12-10  Eli Zaretskii  <eliz@gnu.org>

	* mail/rmailsum.el (rmail-header-summary): RFC2047 decode the
	`from' or `to' address before taking its substring.  Fixes
	incorrect display in Rmail summary buffer whereby an RFC2047
	encoded name is chopped in the middle of the encoded string, and
	thus displayed encoded.

2011-12-10  Juanma Barranquero  <lekktu@gmail.com>

	* makefile.w32-in (update-subdirs-CMD): Use a Local Variables section.

2011-12-10  Eli Zaretskii  <eliz@gnu.org>

	* textmodes/texnfo-upd.el: Update commentary.  Add a warning not
	to use texinfo-update-node and commands that call it if the
	Texinfo file uses @node lines without next/prev/up pointers.
	Correct outdated description about texinfo-master-menu.
	(texinfo-all-menus-update, texinfo-master-menu)
	(texinfo-update-node, texinfo-every-node-update)
	(texinfo-multiple-files-update): Doc fix.  Warn against updating
	all the @node lines.
	(texinfo-master-menu): Only call texinfo-update-node if the prefix
	argument is numeric.  Explain better in the doc string what the
	function really does.
	(texinfo-insert-master-menu-list): Improve the error message
	displayed if there's no menu in the Top node.
	(Bug#2975)  See also this thread:
	http://lists.gnu.org/archive/html/emacs-devel/2011-12/msg00156.html.

2011-12-09  Manuel Gómez  <mgrojo@gmail.com>  (tiny change)

	* speedbar.el (speedbar-supported-extension-expressions):
	Add .adb and .ads, commonly used for Ada source code (bug#10256).

2011-12-09  Juanma Barranquero  <lekktu@gmail.com>

	* printing.el (pr-mode-alist):
	* simple.el (filter-buffer-substring-functions)
	(completion-list-insert-choice-function):
	* window.el (window-with-parameter, window-atom-root)
	(window-sides-slots, window-size-fixed, window-min-delta)
	(window-max-delta, window--resize-mini-window)
	(window--resize-child-windows-normal, window-tree)
	(delete-other-windows, quit-window, split-window)
	(display-buffer-record-window, special-display-buffer-names)